[ADD] website_accorderie: opacity white box and fix wrap text

--- a/website_accorderie/static/src/scss/monprofil/monprofil.scss
+++ b/website_accorderie/static/src/scss/monprofil/monprofil.scss
@@ -59,7 +59,6 @@
 .profile_banner_info {
   display: flex;
   flex-direction: column;
-  margin-left: 10%;
 
   .profile_name {
     font-size: 3rem;
